--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nodejs-mailer-for-daycraft",
+  "name": "nodejs-mailer",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a simple mailer API",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,11 +11,13 @@
   "author": "Arnav Sharma",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.8",
-    "nodemailer-smtp-transport": "^2.7.4",
-    "nodemon": "^3.0.2"
+    "nodemailer": "^6.9.14",
+    "nodemailer-smtp-transport": "^2.7.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
