--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.1",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.14",
-    "nodemailer-smtp-transport": "^2.7.4"
+    "nodemailer-smtp-transport": "^2.4.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
