--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
   "author": "Arnav Sharma",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-rate-limit": "^7.4.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.14",
-    "nodemailer-smtp-transport": "^2.4.2"
+    "nodemailer": "^7.0.10"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.11"
   }
 }
